# requirements-extractor

./: .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  README.md  SPEC.md  dev.sh  docker-compose.yml  todo.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: __init__.py  auth.py  export.py  items.py  projects.py  sessions.py
backend/app/auth/: dependencies.py  utils.py
backend/app/schemas/: items.py  project.py  session.py
backend/app/services/: exporter.py  extraction_service.py  file_parser.py  gemini_client.py  prompt_builder.py  response_parser.py
backend/scripts/: create_user.py
backend/tests/: conftest.py  test_auth.py  test_export.py  test_extraction.py  test_file_parser.py  test_items.py  test_projects.py  test_sessions.py
backend/tests/fixtures/: sample.md  sample.txt
frontend/: DESIGN.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: fixtures.ts  tsconfig.json
frontend/e2e/tests/: auth.spec.ts  extraction.spec.ts  projects.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBanner.tsx  ExportMenu.tsx  ExtractionError.tsx  ExtractionProgress.tsx  LanguageSelect.tsx  Layout.tsx  LoginForm.tsx  LoginLeftPanel.tsx  NFRCard.tsx  OpenQuestionCard.tsx  PriorityBadge.tsx  ProjectCard.tsx  ProjectsEmptyState.tsx  SessionHeader.tsx  Skeleton.tsx  TopNav.tsx  (+2 more)
(+18 files in other folders)
